--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --watch --runInBand",
+    "test1": "jest --watch --runInBand",
+    "test": "dotenv -e .env.test jest -- --watch --runInBand",
     "ts-node": "ts-node",
     "tsc:check": "npm run tsc -- --noEmit",
     "tsc": "tsc",
     "db:push": "npx prisma db push",
     "studio": "npx prisma studio"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} src/backend/testing/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "^5.2.0",
@@ -36,6 +40,7 @@
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.4",
     "@types/uuid": "^9.0.3",
+    "dotenv-cli": "^7.3.0",
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
     "prisma": "^5.2.0",
