--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@
 
 # DATABASE_URL="postgresql:/A/johndoe:randompassword@localhost:5432/mydb?schema=public"
 DATABASE_URL="mongodb+srv://<user>:<password>@<cluster>.<deployment>.mongodb.net/<database>"
+NEXT_PUBLIC_BASE_URL="http://localhost:3000/api"
