--- a/package.json
+++ b/package.json
@@ -19,18 +19,23 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} src/backend/testing/seed.ts"
   },
   "dependencies": {
+    "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.9",
+    "@mui/material": "^5.14.10",
+    "@mui/x-data-grid": "^6.14.0",
     "@prisma/client": "^5.2.0",
-    "@types/node": "20.5.7",
-    "@types/react": "18.2.21",
+    "@types/node": "20.6.2",
+    "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.15",
     "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
-    "postcss": "8.4.29",
+    "eslint-config-next": "13.5.1",
+    "next": "13.5.1",
+    "notistack": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
+    "swr": "^2.2.2",
     "typescript": "5.2.2",
     "uuid": "^9.0.0"
   },
