--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "tsc:check": "npm run tsc -- --noEmit",
     "tsc": "tsc",
     "db:push": "npx prisma db push",
-    "studio": "npx prisma studio"
+    "studio": "npx prisma studio",
+    "postinstall": "prisma generate"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} src/backend/testing/seed.ts"
