--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "bcrypt": "^5.1.1",
     "eslint": "8.48.0",
     "eslint-config-next": "13.5.1",
     "next": "13.5.1",
+    "next-auth": "^4.23.2",
     "notistack": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -44,6 +46,7 @@
     "@mermaid-js/mermaid-cli": "^10.4.0",
     "@testing-library/jest-dom": "^6.1.2",
     "@testing-library/react": "^14.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.5.4",
     "@types/uuid": "^9.0.3",
     "dotenv-cli": "^7.3.0",
