--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bcrypt": "^5.1.1",
     "eslint": "8.48.0",
     "eslint-config-next": "13.5.1",
+    "jsonwebtoken": "^9.0.2",
     "next": "13.5.1",
     "next-auth": "^4.23.2",
     "notistack": "^3.0.1",
@@ -48,6 +49,7 @@
     "@testing-library/react": "^14.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.5.4",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/uuid": "^9.0.3",
     "dotenv-cli": "^7.3.0",
     "jest": "^29.6.4",
