--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "next": "13.5.1",
     "next-auth": "^4.23.2",
     "notistack": "^3.0.1",
+    "qs": "^6.11.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "^2.2.2",
@@ -50,6 +51,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.5.4",
     "@types/jsonwebtoken": "^9.0.3",
+    "@types/qs": "^6.9.9",
     "@types/uuid": "^9.0.3",
     "dotenv-cli": "^7.3.0",
     "jest": "^29.6.4",
