--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-dom": "18.2.0",
     "swr": "^2.2.2",
     "typescript": "5.2.2",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "^10.4.0",
