--- a/package.json
+++ b/package.json
@@ -28,18 +28,18 @@
     "@mui/x-data-grid": "^6.14.0",
     "@prisma/client": "^5.2.0",
     "@types/node": "20.6.2",
-    "@types/react": "18.2.22",
-    "@types/react-dom": "18.2.7",
+    "@types/react": "^18.2.58",
+    "@types/react-dom": "^18.2.19",
     "bcrypt": "^5.1.1",
     "eslint": "8.48.0",
-    "eslint-config-next": "13.5.1",
+    "eslint-config-next": "^14.1.0",
     "jsonwebtoken": "^9.0.2",
-    "next": "13.5.1",
-    "next-auth": "^4.23.2",
+    "next": "^14.1.0",
+    "next-auth": "^4.24.6",
     "notistack": "^3.0.1",
     "qs": "^6.11.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "swr": "^2.2.2",
     "typescript": "5.2.2",
     "uuid": "^9.0.0",
