--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "swr": "^2.2.2",
     "typescript": "5.2.2",
     "uuid": "^9.0.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "^10.4.0",
